Legend:
 + added element
 - removed element
 * changed element

===========================================================================
Release 1.0
===========================================================================

2016-06-16  Michael Beyeler <mbeyeler@uci.edu>
 + Add recording function.
 + Add save-to-file function.

2016-06-08  Michael Beyeler <mbeyeler@uci.edu>
 + Add interactive plot mode for stepping forward/backward through frames.

2016-06-07  Michael Beyeler <mbeyeler@uci.edu>
 + Add DotStim for creating random dot clouds.

2016-06-04  Michael Beyeler <mbeyeler@uci.edu>
 + Add GratingStim for creating sinusoidal gratings.

2016-05-20  Michael Beyeler <mbeyeler@uci.edu>
 + Add barebone structure for base/derived classes and test cases
 + Add BarStim for creating a drifting bar stimulus.
 + Add Toolbox project


===========================================================================
Release 0.1
===========================================================================

2014-10-14	Michael Beyeler <mbeyeler@uci.edu>
 + Add code base from CARLsim repo.